fix: dark mode when hover CardLink component

--- a/packages/theme-default/src/components/LinkCard/index.module.scss
+++ b/packages/theme-default/src/components/LinkCard/index.module.scss
@@ -3,3 +3,9 @@
   position: absolute;
   inset: 0;
 }
+
+.linkCard {
+  &:hover {
+    background-color: var(--rp-c-bg-mute);
+  }
+}
